--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "next-themes": "^0.2.1",
     "openai": "^4.28.0",
     "papaparse": "^5.4.1",
+    "puppeteer": "^24.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-table": "^7.8.0",
     "zod": "^3.22.4"
   },
@@ -37,4 +39,4 @@
     "typescript": "^5.3.3",
     "vitest": "^1.2.2"
   }
-} 
+}
