--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-pdf/renderer": "^3.3.7",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.39.3",
+    "@types/react-table": "^7.7.20",
     "csv-parse": "^5.5.3",
     "next": "^14.2.28",
     "next-themes": "^0.2.1",
